RESOLVED FIXED309343
[css-cascade] Invalidate keyframes for revert-rule
https://bugs.webkit.org/show_bug.cgi?id=309343
Summary [css-cascade] Invalidate keyframes for revert-rule
Antti Koivisto
Reported 2026-03-06 03:10:35 PST
Revert rule makes the keyframe style depend on the parent element style.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-06 03:10:47 PST
Antti Koivisto
Comment 2 2026-03-06 03:16:21 PST
EWS
Comment 3 2026-03-06 09:43:38 PST
Committed 308805@main (d6b900fa473c): <https://commits.webkit.org/308805@main> Reviewed commits have been landed. Closing PR #60054 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.