[css-cascade] Invalidate keyframes for revert-rule https://bugs.webkit.org/show_bug.cgi?id=309343 rdar://171889390

Reviewed by Sam Weinig.

`revert-rule` makes the keyframe style depend on the parent element style.

* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/revert-rule-keyframes-dynamic-expected.txt:
* Source/WebCore/animation/BlendingKeyframes.cpp:
(WebCore::BlendingKeyframes::updatePropertiesMetadata):
(WebCore::BlendingKeyframes::analyzeKeyframe):
* Source/WebCore/animation/BlendingKeyframes.h:
(WebCore::BlendingKeyframes::hasPropertiesWithRevertRuleOrLayer const):
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::recomputeKeyframesIfNecessary):

Recompute such keyframes when the parent style changes.

* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::applyProperty):
(WebCore::Style::Builder::applyCustomProperty):

Collect the use of reverts during style building.

* Source/WebCore/style/StyleBuilderState.h:
(WebCore::Style::BuilderState::hasRevertRuleOrLayerInKeyframeStyle const):
* Source/WebCore/style/StyleResolver.cpp:
(WebCore::Style::Resolver::styleForKeyframe const):

Canonical link: https://commits.webkit.org/308805@main